--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ mailchimp-identifier: # Add your MailChimp form identifier. For example - blogen
 #-------------------------------
 # Build settings
 markdown: kramdown
-permalink: /:title
+permalink: /:title-:year
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
